--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@
 
     .contenedor {
         display: flex;
-        justify-content: space-between;
+        justify-content: space-evenly;
         margin: 5% 0;
  
     }
