--- a/styleAd.css
+++ b/styleAd.css
@@ -1,83 +1,84 @@
 
 
 
-body {
-  margin: 0;
-  padding: 0;
-  font-family: DM Sans, sans-serif;
-  background-image: url(img/Recursos/contacto.jpg);
-  background-repeat: no-repeat;
-  background-size: 88% 80%;
-  background-position: center;
-} 
+  body {
+    margin: 0;
+    padding: 0;
+    font-family: DM Sans, sans-serif;
+    background-image: url(img/Recursos/contacto.jpg);
+    background-repeat: no-repeat;
+    background-size: 88% 80%;
+    background-position: center;
+  } 
+  
+  .container {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .formulario {
+    width: 80%;
+    max-width: 600px;
+    background-color: rgba(255, 255, 255, 0.7);
+    padding: 20px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px #256C70(0, 0, 0, 0.1);
+  }
+  
+  .form-group {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  
+  /* Estilos para los campos de entrada y textarea */
+  .form-group input[type="text"],
+  .form-group input[type="email"],
+  .form-group input[type="tel"],
+  .form-group input[type="text"].right-align,
+  .form-group textarea {
+    width: calc(50% - 10px);
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 3px solid #fff;
+    border-radius: 5px;
+    box-sizing: border-box;
+    background-color: transparent;
+  }
+  
+  .mensaje-derecha {
+    width: calc(50% - 10px);
+    padding: 10px;
+    margin-left: 1px;
+    border: 3px solid #fff;
+    border-radius: 5px;
+    box-sizing: border-box;
+    background-color: transparent;
+    float: right;
+  }
+  
+  /* Estilo para el botón de enviar */
+  .form-group input[type="submit"] {
+    width: 100%;
+    padding: 9px;
+    border: none;
+    background-color: #256C70;
+    color: #fff;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  /* Estilos adicionales */
+  .centro {
+    text-align: center;
+  }
 
-.container {
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.formulario {
-  background-color: rgba(255, 255, 255, 0.7); /* Color blanco transparente */
-  padding: 20px;
-  border-radius: 20px;
-}
-input[type="text"],
-textarea {
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 15px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  box-sizing: border-box;
-}
-input[type="text"]::placeholder,
-textarea::placeholder {
-  color: #256C70; /* Cambia el color del marcador  */
-}
-input[type="email"]::placeholder,
-textarea::placeholder {
-  color: #256C70; /* Cambia el color del marcador  */
-}
-input[type="submit"] {
-  width: 100%;
-  padding: 10px;
-  border: none;
-  background-color: #256C70;
-  color: #fff;
-  border-radius: 5px;
-  cursor: pointer;
-}
-input[type="email"] {
-  border: 1px solid #ccc;
-  box-sizing: border-box;
-  padding: 10px;
-}
-
-textarea[name="mensaje"]{
-  border: 1px solid #ccc;
-  box-sizing: border-box;
-  padding: 10px;
-}
-
-.form-group {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-.form-group input,
-.form-group textarea {
-  width: calc(50% - 5px);
-}
-.form-group textarea {
-  resize: vertical;
-  height: 100px;
-}
-.form-group input[type="submit"] {
-  width: 100%;
-}
+  ::placeholder {
+    color: #256C70;
+    font-weight: bold;
+  }
 
 /* APARTIR DE AQUI INICIA CODIGO DE LA SECION UBICACION */
 
